# chatgpt_de_zero-Java

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle  pyproject.toml  settings.gradle
assets/data/: tokenizer.json
assets/dataset/: dataset.json
gradle/wrapper/: gradle-wrapper.properties
pxl_gpt/: dataset.py  dataset_loader.py  main.py  preprocesser.py  tokenizer.py
scripts/: train_tokenizer.py
src/main/java/fr/mrqsdf/: Main.java
src/main/java/fr/mrqsdf/gptlike/: Main.java
src/main/java/fr/mrqsdf/gptlike/resources/: Pair.java
src/main/java/fr/mrqsdf/gptlike/utils/: BPETokenizer.java  ColoredLogger.java  ColoredLoggerExample.java  Dataset.java  DatasetLoader.java
src/main/java/fr/mrqsdf/resources/: Pair.java
src/main/java/fr/mrqsdf/utils/: BPETokenizer.java  Dataset.java  DatasetLoader.java
