[tool.black]
line-length = 150

[build-system]
requires = ["setuptools>=75.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pxl_gpt*"]

[project]
name = "pxl_gpt"
dynamic = ["version"]
authors = [{ name = "PixelCrafted" }]
description = "A custom implementation of a GPT model for the PixelCrafted project."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  'setuptools_scm',
  'kagglehub[pandas-datasets]==0.3.11',
  'lxml==5.3.2',
  'loguru==0.7.3',
  'pre-commit==4.2.0',
]

[tool.setuptools_scm]
version_file = "pxl_gpt/_version.py"
